<resources>
    <string name="application_name">teachpay</string>
    <string name="just_now">Just now</string>
    <string name="Minutes_ago">Minutes ago</string>
    <string name="Days_ago">Days ago</string>
    <string name="Months_ago">Months ago</string>
    <string name="years_ago">years ago</string>
    <string name="Hours_before">Hours before</string>
    <string name="Today">Today</string>
    <string name="yesterday">yesterday</string>
    <string name="beforeyesterday">The day before yesterday</string>
    <string name="Teach_Pay">Teach Pay</string>
    <string name="title_back">Back</string>
    <string name="Arranged_Schedule">Arranged Schedule</string>
    <string name="arts">Arts</string>
    <string name="Hot_courses_in_Institutions">Hot courses in Institutions</string>
    <string name="Sport">Sport</string>
    <string name="Latest_entry_institutions">Latest entry institutions</string>
    <string name="subject">Subject</string>
    <string name="institution_income">Institutions income</string>
    <string name="institution_teacher">Institution teacher</string>
    <string name="Institution_window">Institution window</string>
    <string name="Commodity_management">Commodity management</string>
    <string name="institution_settlement">Institution settlement</string>
    <string name="login_success">Login success</string>
    <string name="sign">Sign</string>
    <string name="dialog_input_text_hint">Enter what you think</string>
    <string name="send">Send</string>
    <string name="give_in_return">Rebate</string>
    <string name="withdrawal_amount_param">The withdrawal amount is %s yuan</string>
    <string name="Real_pay">Real pay：</string>
    <string name="Zhou_Bang">Zhou Bang</string>
    <string name="Check_the_coupon_code">View coupon code</string>
    <string name="All">All</string>
    <string name="Withdrawal_amount">Amount</string>
    <string name="Private">Private</string>
    <string name="Change_account_password">Change account password</string>
    <string name="Adjust_teacher_identity">Adjust teacher identity</string>
    <string name="Live">Live</string>
    <string name="Change">Change</string>
    <string name="H5_background">H5 background</string>
    <string name="private_education">Private tutor</string>
    <string name="Purchase_successful">Purchase successful</string>
    <string name="lessthanMaxRange">The service range is less than %skm</string>
    <string name="Document_transcoding">Document transcoding</string>
    <string name="Transcode">Transcode</string>
    <string name="Please_input_H5_file">Please input H5 file </string>
    <string name="Add_H5_file">Add H5 file</string>
    <string name="Fill_mode">Fill mode</string>
    <string name="The_board_zoom">The whiteboard zoom</string>
    <string name="Tu_duck_tools">Tu duck tools</string>
    <string name="Pen_switch">Pen switch</string>
    <string name="font_color">Font color</string>
    <string name="Font_style">Font style</string>
    <string name="Syncing_to_others">Syncing to others</string>
    <string name="Previous_page">Previous page</string>
    <string name="Next_page">Next page</string>
    <string name="Previous_step">Previous step</string>
    <string name="Jump">Jump</string>
    <string name="Switch">Switch</string>
    <string name="Switch_files">Switch files</string>
    <string name="Delete_file">Delete file</string>
    <string name="Next_step">Next step</string>
    <string name="Jump_to_whiteboard">Jump to whiteboard</string>
    <string name="Delete_whiteboard">Delete whiteboard</string>
    <string name="New_whiteboard">New whiteboard</string>
    <string name="background_color">Background color</string>
    <string name="background_picture">Background picture</string>
    <string name="Add">Add</string>
    <string name="Tool_color">Tool color</string>
    <string name="Brush_thickness">Brush thickness</string>
    <string name="font_size">Font size</string>
    <string name="Recall">Recall</string>
    <string name="Redo">Redo</string>
    <string name="Reset_all">Reset all</string>
    <string name="Clear">Clear</string>
    <string name="Clear_coated_duck">Clear coated duck</string>
    <string name="Graffiti_switch">Graffiti switch</string>
    <string name="Board_graffiti">Board(graffiti)</string>
    <string name="Speaker">Speaker</string>
    <string name="Postposition">Postposition</string>
    <string name="Prepose">Prepose</string>
    <string name="Camera_switch">Camera switch</string>
    <string name="Earphone">Earphone</string>
    <string name="Audio_switches">Audio switches</string>
    <string name="Switch_between_inside_and_outside">Switch between inside and outside</string>
    <string name="ppt_transcoding_h5">Please input the H5 file after ppt transcoding</string>
    <string name="Classroom_destroyed">Classroom destroyed</string>
    <string name="Failed_to_create_classroom">Failed to create classroom</string>
    <string name="Video_disconnected">Video disconnected</string>
    <string name="Try_again">Try again</string>
    <string name="Dont_try_again">Don\'t try again</string>
    <string name="To_try_again">To try again</string>
    <string name="Failed_to_synchronize_recording_information">Failed to synchronize recording information</string>
    <string name="Enter_the_classroom_successfully">Enter the classroom Successfully</string>
    <string name="Failure_to_enter_the_classroom">Failure to enter the classroom</string>
    <string name="Historical_data_synchronization_completed">Historical data synchronization completed</string>
    <string name="The_classroom_does_not_exist">The classroom does not exist </string>
    <string name="The_teacher_forbids_you_to_edit_the_whiteboard">The teacher forbids you to edit the whiteboard</string>
    <string name="The_teacher_allows_you_to_edit_the_whiteboard">The teacher allows you to edit the whiteboard</string>
    <string name="Excess_of_cash_withdrawal_amount">Excess of cash withdrawal amount</string>
    <string name="Failed_to_quit_class">Failed to quit class</string>
    <string name="Class_destroyed_successfully">Class destroyed successfully</string>
    <string name="User_signature_expired">User signature expired</string>
    <string name="Quit_class_successfully">Quit class successfully</string>
    <string name="live">Live</string>
    <string name="Course">Course</string>
    <string name="Account">Account</string>
    <string name="Private_Course">Private Class</string>
    <string name="Stay_in_class_today">Stay in class today</string>
    <string name="Complete_version">Complete version</string>
    <string name="Simplified_version">Simplified version</string>
    <string name="Live_Course">Live Course</string>
    <string name="Assistantship">Assistantship</string>
    <string name="Please_enter_account">Please enter account</string>
    <string name="Login_password">Login password</string>
    <string name="Monthly_list">Monthly list</string>
    <string name="General_list">General list</string>
    <string name="to">to : </string>
    <string name="Verification_code">Verification code</string>
    <string name="tab_home">Home</string>
    <string name="Classify_Sort">Classify Sort</string>
    <string name="Recommend2">Recommend</string>
    <string name="See_more_courses">See more courses</string>
    <string name="Latest_sorting">Latest sorting</string>
    <string name="Distance_sorting">Distance sorting</string>
    <string name="Search_org_name">Search organization name</string>
    <string name="Package_details">Package details</string>
    <string name="tab_study">Study</string>
    <string name="Mechanism">Mechanism</string>
    <string name="near">Near</string>
    <string name="tab_im">Message</string>
    <string name="tab_dynamic">Dynamic</string>
    <string name="tutor_class_evaluation_tip">The teacher has left, do you enter the evaluation page?</string>
    <string name="tab_me">Me</string>
    <string name="Cancel_Course">Cancel Course</string>
    <string name="update_info">Modify info</string>
    <string name="Purchase_means_consent">Purchase means consent</string>
    <string name="Terms_and_statements">Terms and statements</string>
    <string name="learning_card_purchase_agreement">《Tmore learning card purchase agreement》</string>
    <string name="im_address_book">Address book</string>
    <string name="Exceeding_service_distance">Exceeding service distance</string>
    <string name="im_group">Group</string>
    <string name="im_interaction">Interaction</string>
    <string name="topic_select">Theme select</string>
    <string name="topic_exchange">Topic</string>
    <string name="scene">Scene</string>
    <string name="Whether_to_cancel_the_course_or_not">Whether to cancel the course or not</string>
    <string name="Whether_to_subscribe_to_courses">Whether to subscribe to courses</string>
    <string name="cancel_appointment_tip">Are you sure you want to cancel %s with %s make an appointment</string>
    <string name="click_see_detail">click see detail</string>
    <string name="hot_assistant_teacher">Hot Tutor</string>
    <string name="newest_version_params">Latest version: %s</string>
    <string name="app_name_params">App Name: %s</string>
    <string name="New_version_found">New version found</string>
    <string name="get_num_coin">Get %s cat coin</string>
    <string name="receive">Receive</string>
    <string name="Tmore_certified_student_assistant">TMore certified Tutor</string>
    <string name="DeleteIsAndNot">Delete?</string>
    <string name="exit">Exit</string>
    <string name="Adult">Adult</string>
    <string name="Childhood">Children</string>
    <string name="TeenAgers">Teenagers</string>
    <string name="University_student">University student</string>
    <string name="time_zone_default">Default local time zone, no need to select if not required</string>
    <string name="video_chat_group_exit">Exit the discussion group. You will no longer receive the discussion group message. Do you want to exit?</string>
    <string name="reached_the_maximum">We have reached the maximum number of connected wheat</string>
    <string name="Speaking_position_is_full2">The speaking position is full, and the other party has been added to the waiting list</string>
    <string name="on_the_wheat">Already on the wheat</string>
    <string name="The_other_side_is_on_the_whea">The other side is on the whea</string>
    <string name="Speaking_position_is_full">Speaking position is full, you have entered the waiting list</string>
    <string name="no_signature">No signature</string>
    <string name="Waiting_for_the_host_to_accept">Waiting for the host to accept</string>
    <string name="linkTimeOut">The teacher\'s continuous request for wheat is out of time. The teacher didn\'t respond</string>
    <string name="sex_nan">male</string>
    <string name="Please_select_a_picture_source_or_video_source">Please select a picture or video source</string>
    <string name="Take_a_picture">Take a picture</string>
    <string name="Select_from_the_album">Select from the album</string>
    <string name="Please_select_a_picture_source">Please select a picture source</string>
    <string name="sex_nv">female</string>
    <string name="Select_picture_from_the_album">Select picture from the album</string>
    <string name="Select_video_from_the_album">Select video from the album</string>
    <string name="cancel">Cancel</string>
    <string name="Take">Take</string>
    <string name="Please_select_video_source">Please select video source</string>
    <string name="Detailed_address2">Detailed address, e.g. Room 101, 1st floor</string>
    <string name="House_number">House number</string>
    <string name="Save_Address">Save Address</string>
    <string name="Update_Address">Update Address</string>
</resources>