<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:paddingLeft="@dimen/dp_12"
    android:paddingRight="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_12"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_radius_12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Please_select_a_picture_source"
            android:textColor="#999999"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/select_take"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/white_radius_12dp"
            android:gravity="center"
            android:text="@string/Take_a_picture"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/select_pick"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/white_radius_12dp"
            android:gravity="center"
            android:text="@string/Select_from_the_album"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/select_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_radius_12dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#999999"
        android:textSize="16sp" />
</LinearLayout>
